--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "typescript": "^5.2.2",
     "vite": "^5.0.8",
     "vue-tsc": "^1.8.25"
+  },
+  "OptionalDependency": {
+    "@rollup/rollup-linux-x64-gnu": "4.9.1"
   }
 }
