--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "vite": "^5.0.8",
     "vue-tsc": "^1.8.25"
   },
-  "OptionalDependency": {
-    "@rollup/rollup-linux-x64-gnu": "4.9.1"
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "^4.9.1"
   }
 }
