--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
   },
   "dependencies": {
     "vue": "^3.3.11",
-    "vue3-carousel": "^0.3.1"
+    "vue3-carousel": "^0.3.1",
+    "vue3-smooth-scroll": "^0.8.1",
+    "vuetify": "^3.4.8"
   },
   "devDependencies": {
+    "@mdi/font": "^7.3.67",
+    "@mdi/js": "^7.3.67",
     "@vitejs/plugin-vue": "^4.5.2",
     "sass": "^1.69.5",
     "typescript": "^5.2.2",
