--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "vue": "^3.3.11",
+    "vue-router": "^4.3.2",
     "vue3-carousel": "^0.3.1",
     "vue3-smooth-scroll": "^0.8.1",
     "vuetify": "^3.4.8"
