--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "picomatch": "^4.0.3",
     "vue": "^3.3.11",
     "vue-router": "^4.3.2",
     "vue3-carousel": "^0.3.1",
